--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <div class="portfolio-box">
                 <img src="cover.png">
                 <div class="portfolio-layer">
-                    <h4>LOGO (another design)</h4>
+                    <h4>Athathi</h4>
                     <p>A simple web page shows designs to enable you to choose the design you want to have. (using Vue js)</p>
                     <a href="#"><i class='bx bx-link-external'></i></a>
                     </div>
