--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                 <a href="https://www.instagram.com/sameeh_1/"><i class='bx bxl-instagram'></i></a>
                 <a href="https://github.com/imagdyz"><i class='bx bxl-github'></i></a>
             </div>
-<!--             <a href="https://drive.google.com/file/d/1QfCUFq6m9vYdV6hvl60DQ4cD_COP8ESH/view?usp=sharing" class="btn">Download CV</a>
-        </div> -->
+            <a href="https://drive.google.com" class="btn">Download CV</a>
+        </div>
 
         <div class="home-img">
             <img src="image.jpg" alt="Personal photo">
