--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <a href="https://www.instagram.com/sameeh_1/"><i class='bx bxl-instagram'></i></a>
                 <a href="https://github.com/imagdyz"><i class='bx bxl-github'></i></a>
             </div>
-            <a href="https://drive.google.com" class="btn">Download CV</a>
+            <a href="https://drive.google.com/file/d/1N70BHCC7qo29tUUfwdZEQVGYCgwGBwD6/view?usp=sharing" class="btn">Download CV</a>
         </div>
 
         <div class="home-img">
